Improving tests